added new changes. some from ben award some from me

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,15 +1,5 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": [
-"    "css",
-"    "html",
-"    "javascript",
-"    "javascriptreact",
-"    "json",
-"    "jsonc",
-"    "python",
-"    "typescript",
-"    "typescriptreact"
-  ],
+  "coc.preferences.formatOnSaveFiletypes": [],
   "coc.preferences.formatOnType": true,
   "powershell.integratedConsole.showOnStartup": false,
   "prettier.arrowParens": "avoid",
